[gd_scene load_steps=8 format=3 uid="uid://dgteg88tqr32r"]

[ext_resource type="Script" path="res://Game.gd" id="1_7mxvr"]
[ext_resource type="AudioStream" uid="uid://rh2x1vbt8ti3" path="res://Assets/Sounds/press_x_twice_looped.mp3" id="1_xbcxo"]
[ext_resource type="PackedScene" uid="uid://dyu0fogpcbqvb" path="res://Scenes/Player.tscn" id="2_rroqc"]
[ext_resource type="Script" path="res://MapController.gd" id="4_yb80y"]
[ext_resource type="PackedScene" uid="uid://bjb716gh7bht7" path="res://Scenes/Anomalies/Rvach/Rvach.tscn" id="5_xceem"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ktjp5"]
size = Vector2(1089.94, 52.7043)

[sub_resource type="GDScript" id="GDScript_js3b4"]
script/source = "extends Camera2D


@onready var ply = get_tree().get_nodes_in_group(\"Player\")[0]


func _process(delta):
	self.position.y = ply.position.y - 64
"

[node name="Game" type="Node2D"]
script = ExtResource("1_7mxvr")

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_xbcxo")

[node name="Player" parent="." instance=ExtResource("2_rroqc")]
position = Vector2(0, -16)

[node name="Map" type="Node2D" parent="." groups=["Map"]]
script = ExtResource("4_yb80y")

[node name="Area2D" type="Area2D" parent="Map"]
scale = Vector2(0.351334, 0.609255)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Area2D"]
position = Vector2(0, -448)
shape = SubResource("RectangleShape2D_ktjp5")

[node name="StepTimer" type="Timer" parent="Map"]
wait_time = 0.85

[node name="StartTimer" type="Timer" parent="Map"]

[node name="Rvach" parent="Map" instance=ExtResource("5_xceem")]
position = Vector2(0, -112)

[node name="MainCamera" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
script = SubResource("GDScript_js3b4")

[connection signal="body_entered" from="Map/Area2D" to="Map" method="_on_area_2d_body_entered"]
